[package]
name = "alice-audio"
version = "1.0.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
license = "MIT OR Apache-2.0"
description = "General-purpose audio processing: FFT, filters, mixer, effects, waveform generation, sample rate conversion, ADSR envelope, ring buffer"

[lib]
crate-type = ["rlib"]
